# mixlayer

./: .gitignore  Cargo.toml  LICENSE  README.md
cli/: Cargo.toml
cli/src/: main.rs  run.rs
data/: Cargo.toml
data/src/: channel.rs  lib.rs
examples/names/: Cargo.toml
examples/names/src/: lib.rs
graph/: Cargo.toml
graph/src/: data.rs  graph.rs  join.rs  lib.rs
graph/src/channel/: inmemory.rs  mod.rs
graph/src/sink/: mod.rs
graph/src/source/: mod.rs
graph/src/transform/: batch.rs  collect.rs  filter.rs  flatten.rs  groupby.rs  map.rs  mod.rs  to_json.rs
lib/: Cargo.toml
lib-macros/: Cargo.toml
lib-macros/src/: lib.rs
lib-macros/tests/: test.rs
lib/src/: lib.rs  mixdb.rs
lib/src/ai/: ffi.rs  mod.rs  openai.rs
lib/src/io/: file.rs  http.rs  mod.rs
lib/src/sink/: fs.rs  mod.rs
lib/src/source/: fs.rs  mod.rs  pdf.rs
runtime-ffi/: Cargo.toml  build.rs
runtime-ffi/proto/: valence.proto
runtime-ffi/src/: buffer.rs  lib.rs
