[package]
name = "valence"
version = "0.1.0"
edition = "2021"

[dependencies]
valence-data = { path = "../data" }
valence-graph = { path = "../graph" }
valence-runtime-ffi = { path = "../runtime-ffi" }
anyhow = { workspace = true }
http = "0.2.8"
log = { workspace = true }
valence-macros = { path = "../lib-macros" }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.108"
