[package]
name = "mixlayer"
version = "0.1.0"
edition = "2021"

[dependencies]
mixlayer-data = { path = "../data" }
mixlayer-graph = { path = "../graph" }
mixlayer-runtime-ffi = { path = "../runtime-ffi" }
anyhow = { workspace = true }
http = "0.2.8"
log = { workspace = true }
mixlayer-macros = { path = "../lib-macros" }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.108"
