[package]
name = "valence-runtime-ffi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11.0"
serde = { workspace = true, features = ["derive"] }

[build-dependencies]
prost-build = "0.11.0"
